archive/scale-catalog/system/kubeapps/2.10.15/app-changelog.md


## [kubeapps-2.10.15](https://github.com/truecharts/charts/compare/kubeapps-2.8.0...kubeapps-2.10.15) (2024-04-23)

### Chore



- bump charts to ensure new icons are released

- update groups html ([#21121](https://github.com/truecharts/charts/issues/21121))

- bump charts to release new docs to fix broken links

- bump everything to regenerate readme's and site index

- bump everything to release new doc pages

- update container image common to v20.3.4[@d7e1b23](https://github.com/d7e1b23) by renovate ([#20527](https://github.com/truecharts/charts/issues/20527))

- update container image common to v20.3.2[@0722ebb](https://github.com/0722ebb) by renovate ([#20334](https://github.com/truecharts/charts/issues/20334))

- update container image kubeapps to v14.7.2[@1ccbe44](https://github.com/1ccbe44) by renovate ([#19317](https://github.com/truecharts/charts/issues/19317))

- update container image common to v20.3.6[@27edfed](https://github.com/27edfed) by renovate ([#20599](https://github.com/truecharts/charts/issues/20599))

- update container image common to v20.3.5[@aedd88a](https://github.com/aedd88a) by renovate ([#20535](https://github.com/truecharts/charts/issues/20535))

- update container image common to v20.3.11[@dae6129](https://github.com/dae6129) by renovate ([#20875](https://github.com/truecharts/charts/issues/20875))

- update container image common to v20.3.3[@3876ba5](https://github.com/3876ba5) by renovate ([#20478](https://github.com/truecharts/charts/issues/20478))

- update container image kubeapps to v15.0.2[@1818f22](https://github.com/1818f22) by renovate ([#20443](https://github.com/truecharts/charts/issues/20443))

- update container image kubeapps to v15.0.1[@12bfab1](https://github.com/12bfab1) by renovate ([#20289](https://github.com/truecharts/charts/issues/20289))

- update container image common to v20.3.7[@8cf9fc9](https://github.com/8cf9fc9) by renovate ([#20819](https://github.com/truecharts/charts/issues/20819))

- update container image common to v20.2.10[@6f99c97](https://github.com/6f99c97) by renovate ([#19876](https://github.com/truecharts/charts/issues/19876))

- update container image common to v20.2.9[@10fd6c5](https://github.com/10fd6c5) by renovate ([#19817](https://github.com/truecharts/charts/issues/19817))

- update container image common to v20.2.4[@f245f5c](https://github.com/f245f5c) by renovate ([#19731](https://github.com/truecharts/charts/issues/19731))

- update container image common to v20.2.3[@06e462e](https://github.com/06e462e) by renovate ([#19673](https://github.com/truecharts/charts/issues/19673))

- update container image common to v20.2.2[@f7d0b92](https://github.com/f7d0b92) by renovate ([#19432](https://github.com/truecharts/charts/issues/19432))

- update container image common to v20.2.0[@91ade87](https://github.com/91ade87) by renovate ([#19361](https://github.com/truecharts/charts/issues/19361))

- fix few more ([#20721](https://github.com/truecharts/charts/issues/20721))

### Chore



- rework SCALE catagories/groups to match helm and remove deprecated charts ([#21111](https://github.com/truecharts/charts/issues/21111))

### Fix



- replace serviceexpert with externalinterfaces/networking-group in the SCALE GUI ([#21154](https://github.com/truecharts/charts/issues/21154))